--- a/client/src/pages/Question/Question.module.css
+++ b/client/src/pages/Question/Question.module.css
@@ -82,7 +82,7 @@
     padding: 2em;
     width: 100%;
     /* width: auto; */
-    background-color: hsla(42, 44%, 76%, 0.09);
+    background-color: hsl(0, 83%, 41%);
     border: 1px solid hsla(42, 44%, 76%, 0.5);
     letter-spacing: 0.03em;
     position: relative;
