--- a/client/src/pages/QuestionList/Filter/Filter.module.css
+++ b/client/src/pages/QuestionList/Filter/Filter.module.css
@@ -1,6 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Serif:ital@1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=PT+Serif&display=swap');
 
+.filterContainer {
+    background-color: hsl(225, 55%, 76%);
+    padding: 1rem;
+    color: white; /* Makes text readable on blue */
+    height: 100vh; /* Full height if this is a sidebar */
+}
+
 .heading {
     margin: 0.1em 0.1em 0.4em 0.1em;
     letter-spacing: 0.1rem;
@@ -9,14 +16,14 @@
     font-size: 2em;
     padding: 0.3rem 0;
     font-weight: 600;
-    /* background-color: rgba(220, 174, 227, 0.1); */
+    background-color: rgba(255, 255, 255, 0.1);
     font-family: 'PT Serif', serif;
-    border-bottom: 1px solid rgba(34, 36, 38, 0.15);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .clearFilter {
     padding-bottom: 1em;
-    border-bottom: 1px solid rgba(34, 36, 38, 0.15);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 /* top | right | bottom | left */
