--- a/client/src/compenents/NavBar/style.css
+++ b/client/src/compenents/NavBar/style.css
@@ -18,7 +18,7 @@
     padding: 5px 15px;
     border: unset;
     font-size: 1.25rem;
-    color: var(--nav-text) !important;
+    color: white !important;
     line-height: 2;
     height: 40px;
     z-index: 1000;
@@ -30,7 +30,7 @@
 }
 
 .myNavLink {
-    color: var(--nav-text);
+    color: white;
     font-weight: 500;
     text-decoration: none;
     position: relative;
@@ -50,14 +50,14 @@
 }
 
 .myNavLink::after {
-    top: 43%;
+    bottom: 4px;    
     border-radius: 2em;
     content: '';
     position: absolute;
     right: 8px;
     left: 8px;
     height: 4px;
-    background: var(--primary-color);
+    background: rgb(0, 229, 255);
     transform: scaleX(0);
     transform-origin: right;
     transition: transform 400ms cubic-bezier(0.4, 0.0, 0.2, 1);
@@ -71,7 +71,7 @@
 }
 
 .navbar {
-    background-color: var(--nav-bg) !important;
+    background-color: rgb(18, 18, 18);
     z-index: 900 !important;
     position: fixed !important;
     padding: 0.3rem 0rem 0.3rem 2rem !important;
@@ -95,7 +95,7 @@
 
 .navbar-nav .nav-link {
     text-transform: uppercase !important;
-    color: var(--nav-text) !important;
+    color: white !important;
     padding-right: 1rem !important;
     padding-left: 1rem !important;
 }
@@ -103,6 +103,7 @@
 .nav-link {
     padding: 0.8rem 1rem !important;
 }
+
 
 .navbar-nav .nav-item {
     position: relative;
